- Fixed long chat getting cropped in picking screen (not tested)

--- a/content/dota_addons/dota_imba/panorama/styles/custom_game/hero_selection.css
+++ b/content/dota_addons/dota_imba/panorama/styles/custom_game/hero_selection.css
@@ -734,6 +734,10 @@ RadioButton.Disabled:selected {
 	/*height: 80%;*/
 }
 
+DOTAChat#HudChat .ChatLine {
+	width:  420px;
+	max-width: 420px;
+}
 #ChatLinesOverlay {
 	background-color: transparent;
 }
